<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_50sdp"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_7sdp"
    android:layout_marginVertical="@dimen/_10sdp"
    android:background="@drawable/date_back">

    <TextView
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wed"
        android:layout_gravity="center"
        android:textColor="@color/text_color"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_9sdp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:textColor="@color/text_color"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="@dimen/_3sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:text="@string/_24"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oct"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:textColor="@color/text_color"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_3sdp"
        android:layout_marginBottom="@dimen/_9sdp"/>

</LinearLayout>